[package]
name = "l0"
version = "0.1.0"
edition = "2021"

[dependencies]
postgres = "0.19"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono"] }
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
uuid = "1.10.0"
